# heyLaraChallenge

./: .gitignore  README.md  pyproject.toml
src/: app.py  prompt.py  schema.py
