[tool.poetry]
name = "hey-lara-challenge"
version = "0.1.0"
description = ""
authors = ["Takahiro Mitsui <takahiro.mitsui@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.0.401"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
