[tool.poetry]
name = "hey-lara-challenge"
version = "0.1.0"
description = ""
authors = ["Takahiro Mitsui <takahiro.mitsui@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.0.401"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
langchain-core = "^0.1.36"
langchain-openai = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
